@@ -8,27 +8,13 @@
 package org.elasticsearch.xpack.esql.expression.function.fulltext;
 
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
-import org.elasticsearch.xpack.esql.action.EsqlCapabilities;
-import org.elasticsearch.xpack.esql.expression.predicate.fulltext.MultiMatchQueryPredicate;
+import org.elasticsearch.xpack.esql.expression.function.scalar.score.Decay;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class FullTextWritables {
 
     public static List<NamedWriteableRegistry.Entry> getNamedWriteables() {
-        List<NamedWriteableRegistry.Entry> entries = new ArrayList<>();
-
-        entries.add(MultiMatchQueryPredicate.ENTRY);
-        entries.add(QueryString.ENTRY);
-        entries.add(Match.ENTRY);
-        entries.add(Kql.ENTRY);
-
-        if (EsqlCapabilities.Cap.TERM_FUNCTION.isEnabled()) {
-            entries.add(Term.ENTRY);
-        }
-
-        return Collections.unmodifiableList(entries);
+        return List.of(QueryString.ENTRY, Match.ENTRY, MultiMatch.ENTRY, Kql.ENTRY, MatchPhrase.ENTRY, Score.ENTRY, Decay.ENTRY);
     }
 }
