@@ -17,6 +17,7 @@ import org.apache.kerby.kerberos.kerb.server.SimpleKdcServer;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.elasticsearch.ExceptionsHelper;
+import org.elasticsearch.core.Booleans;
 import org.elasticsearch.core.SuppressForbidden;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.test.ESTestCase;
@@ -25,7 +26,6 @@ import java.io.IOException;
 import java.net.DatagramSocket;
 import java.net.InetAddress;
 import java.net.ServerSocket;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.AccessController;
@@ -86,7 +86,7 @@ public class SimpleKdcLdapServer {
             @Override
             @SuppressForbidden(reason = "set or clear system property krb5 debug in kerberos tests")
             public Boolean run() throws Exception {
-                boolean oldDebugSetting = Boolean.parseBoolean(System.getProperty("sun.security.krb5.debug"));
+                boolean oldDebugSetting = Booleans.parseBoolean(System.getProperty("sun.security.krb5.debug", "false"));
                 System.setProperty("sun.security.krb5.debug", Boolean.TRUE.toString());
                 return oldDebugSetting;
             }
@@ -154,7 +154,7 @@ public class SimpleKdcLdapServer {
             + "admin_pw=secret\n"
             + "base_dn="
             + baseDn;
-        Files.write(this.workDir.resolve("backend.conf"), backendConf.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(this.workDir.resolve("backend.conf"), backendConf);
         assert Files.exists(this.workDir.resolve("backend.conf"));
     }
 
